# android-efi

./: .travis.yml  README.md  android.c  android.h  graphics.c  graphics.h  guid.c  guid.h  image.c  image.h  linux.c  linux.h  main.c  malloc.c  malloc.h  meson.build  partition.c  partition.h  string.c  string.h
png2efi/: meson.build  png2efi.c
